@@ -1106,31 +1106,9 @@ class DistUpgradeController(object):
             res = subprocess.call(cmd)
             logging.debug("cmd: %s returned %i" % (cmd, res))
         
-    def _checkAndRemoveEvms(self):
-        " check if evms is in use and if not, remove it "
-        for line in open("/proc/mounts"):
-            line = line.strip()
-            if line == '' or line.startswith("#"):
-                continue
-            try:
-                (device, mount_point, fstype, options, a, b) = line.split()
-            except Exception, e:
-                logging.error("can't parse line '%s'" % line)
-                continue
-            if "evms" in device:
-                logging.debug("found evms device in line '%s', skipping " % line)
-                return False
-        self.forced_obsoletes.extend(["evms","libevms-2.5","libevms-dev",
-                                      "evms-ncurses", "evms-ha",
-                                      "evms-bootdebug",
-                                      "evms-gui", "evms-cli",
-                                      "linux-patch-evms"])
-        return True
-
     def from_dapperQuirks(self):
         " this works around quirks for dapper->hardy upgrades "
         logging.debug("running Controler.from_dapperQuirks handler")
-        self._checkAndRemoveEvms()
         self._rewriteFstab()
         self._checkAdminGroup()
         
@@ -1138,7 +1116,6 @@ class DistUpgradeController(object):
     def gutsyQuirks(self):
         """ this function works around quirks in the feisty->gutsy upgrade """
         logging.debug("running Controler.gutsyQuirks handler")
-        self._checkAndRemoveEvms()
 
     def feistyQuirks(self):
         """ this function works around quirks in the edgy->feisty upgrade """
