@@ -13,6 +13,8 @@ update-manager (1:0.87.16) hardy; urgency=low
     - set status to "Calculating changes" again after displaying
       demoted packages
     - improve logging if prerequisites download fails
+  * DistUpgrade/DistUpgradeCache.py:
+    - improve the evms detection/removal (thanks to Lamont Jones)
   * DistUpgrade/DistUpgrade.cfg.dapper:
     - add "lvm2" to the KeepInstalledPkgs (LP: #211488)
     - sync RemoveObsoletes, ForcedObsoletes, KeepInstalledSections
